corrected the g-grey-500 global css variable. It was too dark before. - Fixed the styling of Spinner component to be a proper spinner

--- a/client/components/Spinner/style.scss
+++ b/client/components/Spinner/style.scss
@@ -2,18 +2,22 @@
   display: inline-block;
   position: relative;
   animation: spin 1s linear infinite;
+  min-width: 15px;
+  min-height: 15px;
 
   &::after {
     content: "";
+    display: inline-block;
     position: absolute;
+    width: 100%;
+    height: 100%;
     left: 0;
     top: 0;
-    border-top: 2px solid $g-grey-500;
-    border-right: 2px solid transparent;
-    border-bottom: 2px solid transparent;
-    border-left: 2px solid transparent;
+    border-top: 3px solid $g-grey-500;
+    border-right: 3px solid transparent;
+    border-bottom: 0 solid transparent;
+    border-left: 0 solid transparent;
     border-radius: 50%;
-    transition: ;
   }
 }
 
@@ -24,7 +28,4 @@
   to {
     transform: rotate(360deg);
   }
-}
-
-.spinner {
 }
